--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Re-Add transition document
+
 0.000029  2016-03-09 10:04:19-08:00 America/Los_Angeles
 
     - Add pid to Files driver temp dir name
