--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Apply spelling fixes (aquire->acquire) #11
+    - Improve error message for missing hubs #12
 
 0.000030  2016-03-15 08:04:21-07:00 America/Los_Angeles
 
