--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add subtest name to pending warning
+
 0.000012  2016-03-18 17:52:46-07:00 America/Los_Angeles
 
     - Fix trigger conditions for pending warning
