--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Documentation fixes
+    - No logic/code changes
+
 0.000023  2016-03-17 23:02:50-07:00 America/Los_Angeles
 
     - Fix Changes file
