--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Do not warn if unimportant INIT block cannot be run
+    - Change how TAP duplicates IO handles, use 3 arg form of open
+
 0.000035  2016-03-25 09:41:46-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - More fixes for #16
