Prevent formatter from unconditionally loading Test2::API
Some modules should not directly or indirectly load Test2::API at
compile-time. It is ok to do so at run-time.

Formatter is the only module that loaded the API when it should not. I
have added tests to insure several others do not, none fo them required
any changes.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Change Formatter to load Test2::API on demand
+    - Add test to insure Test2::API is not loaded by some modules
+
 0.000036  2016-03-28 11:44:53-07:00 America/Los_Angeles
 
     - Do not warn if unimportant INIT block cannot be run
