update changes and Test2 version

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Allow column aliasing in Deltas (jkeroes)
+    - Bump required Test2 version
+
 0.000024  2016-03-20 13:40:06-07:00 America/Los_Angeles
 
     - Add back missing README and README.md files
