--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add summary() method to event base class
+
 0.000037  2016-04-01 08:41:22-07:00 America/Los_Angeles
 
     - Change Formatter to load Test2::API on demand
