--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Formatters can pick buffered subtest behavior
+    - Add sets_plan() method to event base class
 
 0.000038  2016-04-03 15:41:39-07:00 America/Los_Angeles
 
