--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Support some newer event features from Test2
+    - Bump minimum Test2 version
+
 1.302013_015 2016-03-29 09:24:10-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Bump minimum Test2 version to protect from segv
