--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+    - Add OrderedSubset compare tools
+    - Use OrderedSubset compare tool in subtest tests.
+    - Bump minimumTest2 version
+
 0.000025  2016-04-03 15:39:59-07:00 America/Los_Angeles
 
     - Allow column aliasing in Deltas (jkeroes)
