--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Improve T2_FORMATTER parsing
+
 0.000041  2016-04-13 20:21:38-07:00 America/Los_Angeles
 
     - Do not use custom formatter in sensitive tests
