--- a/Changes
+++ b/Changes
@@ -7,10 +7,11 @@
     - Document 2 methods on Events
     - Fix Test2 #17 (typo fix in docs)
     - Report version mismatches between Test::Builder and Test2
+    - Update transition docs
 
 *****************************************************************************
 *                                                                           *
-* BELOW THIS POINT ARE THE SEPERATE CHANGELONGS FOR Test-Simple, Test2, AND *
+* BELOW THIS POINT ARE THE SEPERATE CHANGELOGS FOR Test-Simple, Test2, AND  *
 * Test-Stream.                                                              *
 *                                                                           *
 *****************************************************************************
@@ -513,7 +514,7 @@ Test-Simple 0.81_01 2008-Sep-6 15:13-08:00 PDT
     Feature Changes
     * Changed the message for extra tests run to show the number of tests run rather than
       the number extra to avoid the user having to do mental math.
-      [rt.cpan.org 7022]    
+      [rt.cpan.org 7022]
 
     Bug fixes
     - using a relative path to perl broke tests              [rt.cpan.org 34050]
@@ -547,9 +548,9 @@ Test-Simple 0.77 2008-Feb-27 01:55-08:00 PST
       any other importing.
     - Fix the $TODO finding code so it can find $TODO without the benefit
       of exported_to(), which is often wrong.
-    - Turn off the filehandle locale stuff for the moment, there's a 
+    - Turn off the filehandle locale stuff for the moment, there's a
       problem on 5.10.  We'll try it again next release.
-      
+
     Doc improvements
     - Improve the Test::Builder SYNOPSIS to use Test::Builder::Module
       rather than write it's own import().
@@ -585,12 +586,12 @@ Test-Simple 0.75 2008-Feb-23 19:03-08:00 PST
     - Turns out require_ok() had the same bug as use_ok() in a BEGIN block.
     - ok() was not honoring exported_to() when looking for $TODO as it
       should be.
-    
+
     Test fixes
     * is_deeply_with_threads.t will not run unless AUTHOR_TESTING is set.
       This is because it tickles intermittent threading bugs in many perls
       and causes a lot of bug reports about which I can do nothing.
-    
+
     Misc
     - Ran through perlcritic and did some cleaning.
 
@@ -604,7 +605,7 @@ Test-Simple 0.73_01 2007-Oct-15 20:35-08:00 EDT
 
 Test-Simple 0.72 2007-Sep-19 20:08-08:00 PDT
     Bug unfixes
-    * The BEGIN { use_ok } fix for [rt.cpan.org 28345] revealed a small pile of 
+    * The BEGIN { use_ok } fix for [rt.cpan.org 28345] revealed a small pile of
       mistakes in CPAN module test suites.  Rolling the fix back to give the
       authors a bit of time to fix their tests.
 
@@ -770,13 +771,13 @@ Test-Simple 0.60_01 2005-Jul-3 18:11-08:00 PDT
       operator is numeric. [rt.cpan.org 13156]
     - cmp_ok(), like() and unlike will now throw uninit warnings if their
       arguments are undefined. [rt.cpan.org 13155]
-    - cmp_ok() will now throw warnings as if the comparison were run 
-      normally, for example cmp_ok(2, '==', 'foo') will warn about 'foo' 
+    - cmp_ok() will now throw warnings as if the comparison were run
+      normally, for example cmp_ok(2, '==', 'foo') will warn about 'foo'
       not being numeric.  Previously all warnings in the comparison were
       suppressed. [rt.cpan.org 13155]
     - Tests will now report *both* the number of tests failed and if the
       wrong number of tests were run.  Previously if tests failed and the
-      wrong number were run it would only report the latter. 
+      wrong number were run it would only report the latter.
       [rt.cpan.org 13494]
     - Missing or extra tests are not considered failures for the purposes
       of calculating the exit code.  Should there be no failures but the
@@ -808,7 +809,7 @@ Test-Simple 0.59_01 2005-Apr-26 21:51-08:00 PDT
     - todo() now honors $Level when looking for $TODO.
 
 Test-Simple 0.54 2004-Dec-15 04:18-08:00 EST
-    * $how_many is optional for skip() and todo_skip().  Thanks to 
+    * $how_many is optional for skip() and todo_skip().  Thanks to
       Devel::Cover for pointing this out.
     - Removed a user defined function called err() in the tests to placate
       users of older versions of the dor patch before err() was weakend.
@@ -828,14 +829,14 @@ Test-Simple 0.53 2004-Nov-29 04:43-08:00 EST
       (not a real bug)
 
 Test-Simple 0.52 2004-Nov-28 21:41-08:00 EST
-    - plan() now better checks that the given plan is valid. 
+    - plan() now better checks that the given plan is valid.
       [rt.cpan.org 2597]
 
 Test-Simple 0.51_02 2004-Nov-27 01:25-08:00 EST
     * is_deeply() and all the eq_* functions now handle circular data
       structures.  [rt.cpan.org 7289]
     * require_ok() now handles filepaths in addition to modules.
-    - Clarifying Test::More's position on overloaded objects 
+    - Clarifying Test::More's position on overloaded objects
     - Fixed a bug introduced in 0.51_01 causing is_deeply() to pierce
       overloaded objects.
     - Mentioning rt.cpan.org for reporting bugs.
@@ -854,7 +855,7 @@ Test-Simple 0.51_01 2004-Nov-26 02:59-08:00 EST
       [rt.cpan.org 7030]
     - is_deeply() diagnostics a little off when scalar refs were inside
       an array or hash ref [rt.cpan.org 7033]
-    - Thanks to Fergal Daly for ferretting out all these long standing 
+    - Thanks to Fergal Daly for ferretting out all these long standing
       is_deeply and eq_* bugs.
 
 Test-Simple 0.51 2004-Nov-23 04:51-08:00 EST
@@ -881,9 +882,9 @@ Test-Simple 0.48_02 2004-Jul-19 02:07-08:00 EDT
       [rt.cpan.org 4218 and 4232]
     * Overloaded objects which stringify to undef used as test names
       now won't cause internal uninit warnings. [rt.cpan.org 4232]
-    * Failure diagnostics now come out on their own line when run in 
+    * Failure diagnostics now come out on their own line when run in
       Test::Harness.
-    - eq_set() sometimes wasn't giving the right results if nested refs 
+    - eq_set() sometimes wasn't giving the right results if nested refs
       were involved [rt.cpan.org 3747]
     - isnt() giving wrong diagnostics and warning if given any undefs.
     * Give unlike() the right prototype [rt.cpan.org 4944]
@@ -906,14 +907,14 @@ Test-Simple 0.48_01 2002-Nov-11 02:36-08:00 EST
       off all diag() statements.
     * Test::Builder/More no longer automatically loads threads.pm
       when threads are enabled.  The user must now do this manually.
-    * Alex Francis added reset() reset the state of Test::Builder in 
+    * Alex Francis added reset() reset the state of Test::Builder in
       persistent environments.
     - David Hand noted that Test::Builder/More exit code behavior was
       not documented.  Only Test::Simple.
 
-Test-Simple 0.47 2002-Aug-26 03:54-08:00 PDT 
-    * Tatsuhiko Miyagawa noticed Test::Builder was accidentally storing 
-      objects passed into test functions causing problems with tests 
+Test-Simple 0.47 2002-Aug-26 03:54-08:00 PDT
+    * Tatsuhiko Miyagawa noticed Test::Builder was accidentally storing
+      objects passed into test functions causing problems with tests
       relying on object destruction.
     - Added example of calculating the number of tests to Test::Tutorial
     - Peter Scott made the ending logic not fire on child processes when
@@ -959,7 +960,7 @@ Test-Simple 0.43 2002-Apr-11 22:55-08:00 EDT
 Test-Simple 0.42 2002-Mar-6 15:00-08:00 EST
     - Setting Test::Builder->current_test() now works (see what happens
       when you forget to test things?)
-    - The change in is()'s undef/'' handling in 0.34 was an API change, 
+    - The change in is()'s undef/'' handling in 0.34 was an API change,
       but I forgot to declare it as such.
     - The apostrophilic jihad attacks!  Philip Newtons patch for
       grammar mistakes in the doc's.
@@ -983,14 +984,14 @@ Test-Simple 0.40 2001-Dec-14 15:41-08:00 EST
       isa_ok() now accounts for that.
 
 Test-Simple 0.36 2001-Nov-29 14:07-08:00 EST
-    - Matthias Urlichs found that intermixed prints to STDOUT and test 
+    - Matthias Urlichs found that intermixed prints to STDOUT and test
       output came out in the wrong order when piped.
 
 Test-Simple 0.35 2001-Nov-27 19:57-08:00 EST
     - Little glitch in the test suite.  No actual bug.
 
 Test-Simple 0.34 2001-Nov-27 15:43-08:00 EST
-    * **API CHANGE** Empty string no longer matches undef in is() 
+    * **API CHANGE** Empty string no longer matches undef in is()
       and isnt().
     * Added isnt_eq and isnt_num to Test::Builder.
 
