Restore x-breaks meta-data

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - RC2
+    - Restore X-Breaks meta info
+
 1.302014_001 2016-04-22 04:01:50-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - RC1
