--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 
     - RC2
     - Restore X-Breaks meta info
+    - Keep dist.ini in the tarball
 
 1.302014_001 2016-04-22 04:01:50-07:00 America/Los_Angeles (TRIAL RELEASE)
 
