--- a/README
+++ b/README
@@ -92,7 +92,7 @@ SEE ALSO
 
 SOURCE
     The source code repository for Test2 can be found at
-    http://github.com/Test-More/Test2/.
+    http://github.com/Test-More/test-more/.
 
 MAINTAINERS
     Chad Granum <exodist@cpan.org>
@@ -101,7 +101,7 @@ AUTHORS
     Chad Granum <exodist@cpan.org>
 
 COPYRIGHT
-    Copyright 2016 Chad Granum <exodist7@gmail.com>.
+    Copyright 2016 Chad Granum <exodist@cpan.org>.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
