--- a/README
+++ b/README
@@ -257,7 +257,7 @@ AUTHORS
     Chad Granum <exodist@cpan.org>
 
 COPYRIGHT
-    Copyright 2015 Chad Granum <exodist7@gmail.com>.
+    Copyright 2015 Chad Granum <exodist@cpan.org>.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
