--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+    - RC9
+    - No logic changes
+    - Update x-breaks stuff
+    - Update email addresses
+
 1.302014_008 2016-04-26 11:40:40-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - RC8
