--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - SRand now works without harness
+    - Fix emails
+
 0.000028  2016-04-15 14:32:30-07:00 America/Los_Angeles
 
     - Add Tools/Event gen_event()
