--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Doc updates from jkeroes
+    - Doc updates from stevieb9
     - SRand now works without harness
     - Fix emails
 
