--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+    - RC10
+    - Update x-breaks, Breakage.pm, and Transition.POD
+    - Fix shared memory leak
+    - Fix typos and clarify docs.
+
 1.302014_009 2016-04-27 10:05:18-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - RC9
