Update breakge meta-data and POD
This is a minor update.

Add subtest outdent to transition.pod
Add a couple modules to breakage meta-data

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+    - Add Test::Alien to breakage info
+    - Add Device::Chip to breakage info
+    - Add subtest outdent to transition.pod
+
 1.302014_010 2016-05-03 12:09:14-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - RC10
