Block signals in key IPC section
Fix #668
Fix #661

Squashed commit of the following:

commit d07433e9fe4724d1d382acfc6a45c41cd95fc9e7
Author: Chad Granum <exodist7@gmail.com>
Date:   Thu May 12 17:40:18 2016 -0700

    Add third argument to sigprocmask

commit 957691552818681ed92b604b13108d7833e0a135
Author: Chad Granum <exodist7@gmail.com>
Date:   Thu May 12 16:30:22 2016 -0700

    Win32 checks for IPC signal masking

commit 1ca142377150915b80a4a8c052a5f5e595bb0471
Author: Chad Granum <exodist7@gmail.com>
Date:   Thu May 12 15:06:10 2016 -0700

    Change list of signals

    Also add missing parens that broke 5.8

commit 6a1d437366b82cf8d7f06a2f69e14e0d048a09d9
Author: Chad Granum <exodist7@gmail.com>
Date:   Thu May 12 14:34:14 2016 -0700

    Mask signals when writing IPC files

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Block signals in critical IPC section (Fix #661 and #668)
+
 1.302015  2016-05-09 07:46:54-07:00 America/Los_Angeles
 
     - Add Test::Alien to breakage info
