--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 {{$NEXT}}
 
     - Block signals in critical IPC section (Fix #661 and #668)
+    - Merge Examples and examples into one dir (#660)
+    - Documentation and typo fixes
 
 1.302015  2016-05-09 07:46:54-07:00 America/Los_Angeles
 
