make no_plan a no-op when plan is set (with warning)
Fixes #662

--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
     - Merge Examples and examples into one dir (#660)
     - Documentation and typo fixes
     - Make Test2::Util::get_tid have a consistent prototype (#665)
+    - Make TB->no_plan a no-op if a plan is set
 
 1.302015  2016-05-09 07:46:54-07:00 America/Los_Angeles
 
