--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Handle Test::Builder::Exception properly
+
 1.302017  2016-05-13 08:09:58-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix util.t win32 bug
