--- a/README
+++ b/README
@@ -69,9 +69,9 @@ NAMESPACE LAYOUT
     This is for Test2 API and related packages.
 
   Test2::
-    The Test2:: namespace is intended for extentions and frameworks. Tools,
+    The Test2:: namespace is intended for extensions and frameworks. Tools,
     Plugins, etc should not go directly into this namespace. However
-    extentions that are used to build tools and plugins may go here.
+    extensions that are used to build tools and plugins may go here.
 
     In short: If the module exports anything that should be run directly by
     a test script it should probably NOT go directly into "Test2::XXX".
