--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+    - Many micro-opts from Graham Knop (haarg)
+    - Spelling fixes and tests from Karen Etheridge (ether)
+    - Fix leaky File.t file so that tmp doesn't fill up
+    - Move some modules out of the known broken list in xt tests
+    - Add Test2 based tools to downstream testing
+    - Change when PID/TID are stashed (for forkprove)
+
 1.302019  2016-05-18 08:16:39-07:00 America/Los_Angeles
 
     - POD Spelling fixes
