Meta-data updates

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Comp[lete rewrite
+
 0.000006  2016-02-05 15:45:57-08:00 America/Los_Angeles
 
     - Prep for a new Trace::Mask version
