--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix ClassicCompare to load deps (#23)
+
 0.000032  2016-06-17 06:58:17-07:00 America/Los_Angeles
 
     - Add 'bag' comparison (dakkar)
