--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix nested TODO handling of Diags (#684)
+
 1.302031  2016-06-21 09:51:27-07:00 America/Los_Angeles
 
     - Remove carp from dep list #682
