--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Require newer Test2::AsyncSubtest for bugfixes
+
 0.000010  2016-06-22 09:16:07-07:00 America/Los_Angeles
 
     - Fix for (and require) Test2-Suite 0.000032 (#2)
