--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add some regression tests for previous fixes
+
 0.000034  2016-06-22 11:30:00-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Bump minimum Test2 version
