--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Better comments in SRAND (#7)
+
 0.000035  2016-06-23 14:48:54-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Make it possible to provide a name to isa_ok, can_ok, and DOES_ok
