Make in_set(DNE) work, Add E() shortcut
Fixes #10

--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@
 0.000036  2016-06-24 05:58:51-07:00 America/Los_Angeles
 
     - Better comments in SRAND (#7)
+    - Fix in_set(DNE) (#10)
+    - Add E()
 
 0.000035  2016-06-23 14:48:54-07:00 America/Los_Angeles (TRIAL RELEASE)
 
