Report proper file+line for shortcuts.
Originally these were constants, but constants do not have the right
line number and file, so now these are built as needed. This may be a
bit slower, but it is correct.

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
     - Better comments in SRAND (#7)
     - Fix in_set(DNE) (#10)
     - Add E()
+    - Proper line reporting for shortcuts.
 
 0.000035  2016-06-23 14:48:54-07:00 America/Los_Angeles (TRIAL RELEASE)
 
