--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since last trial
+
 0.000011  2016-06-22 11:32:58-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Require newer Test2::AsyncSubtest for bugfixes
