Fix noisy and leaky tests
Fixes #28

This stops polluting STDERR.

This stops temp file leaks.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+    - Stop leaking temp files
+    - clean up STDERR
+    - Fix #28
+
 0.000038  2016-06-25 13:20:07-07:00 America/Los_Angeles
 
     - No Changes from last TRIAL release
