--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Fix some breakage info (Thanks Dolman!)
+    - POD Fixes (Thanks cpansprout!)
+
 1.302033  2016-06-24 05:56:54-07:00 America/Los_Angeles
 
     - No changes from last trial release
