--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Do not apply mock defined on root action.
+
 0.000012  2016-06-24 06:01:16-07:00 America/Los_Angeles
 
     - No changes since last trial
