--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Restore PerlIO layer cloning on STDERR and STDOUT
+
 1.302035  2016-06-27 08:55:55-07:00 America/Los_Angeles
 
     - No changes since TRIAL release
