--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes from trial
+
 1.302036  2016-07-03 11:52:45-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Restore PerlIO layer cloning on STDERR and STDOUT
