--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix broken MANIFEST.SKIP entries (#689)
+
 1.302037  2016-07-04 10:09:00-07:00 America/Los_Angeles
 
     - No changes from trial
