--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 {{$NEXT}}
 
+    - Doc fixes
+    - Add U() quick check to Test2::Tools::Compare
+
 0.000048  2016-07-02 22:08:10-07:00 America/Los_Angeles
+
+    - No changes from last trial
 
 0.000047  2016-07-01 18:09:26-07:00 America/Los_Angeles (TRIAL RELEASE)
 
