--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes from last trial
+
 1.302039  2016-07-07 22:01:02-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add Info event for better diagnostics
