--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No Changes since trial
+
 0.000049  2016-07-07 22:02:24-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Doc fixes
