--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Work around IPC bug on windows
+
 1.302040  2016-07-09 16:55:00-07:00 America/Los_Angeles
 
     - No changes from last trial
