--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix IPC event ordering bug
+
 1.302041  2016-07-09 17:01:45-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Work around IPC bug on windows
