--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes from last TRIAL release
+
 1.302044  2016-07-13 17:56:20-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix test that segv'd on older perls
