--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes from last TRIAL
+
 0.000051  2016-07-13 18:00:17-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Switch Extended bundle to use Importer
