--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Make bag check fail when given an empty array
+    - Clean up bag diagnostics
+
 0.000052  2016-07-18 09:07:25-07:00 America/Los_Angeles
 
     - No changes from last TRIAL
