--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add spec_defaults()
+
 0.000014  2016-07-02 22:11:29-07:00 America/Los_Angeles
 
     - No Changes from last trial
