Run test blocks when done_testing is missing
Fixes #3

This depends on a newer Test2, currently only out in TRIAL mode.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
 
+    - Run blocks when done_testing is missing (#3)
     - Add spec_defaults()
 
 0.000014  2016-07-02 22:11:29-07:00 America/Los_Angeles
