--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No Changes from last trial
+
 1.302048  2016-07-27 07:42:14-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add 'active' attribute to hub
