--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes from last trial
+
 0.000053  2016-07-22 22:51:37-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Make bag check fail when given an empty array
