--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
 
+    - Spelling fix from Debian (Thanks gregor herrmann)
     - Fix \d -> [0-9] in several places (Thanks Mark F.)
 
 0.000054  2016-07-28 07:10:34-07:00 America/Los_Angeles
