--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add contact info to main doc and readme
+
 1.302049  2016-07-28 07:03:31-07:00 America/Los_Angeles
 
     - No Changes from last trial
