--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add contact info to docs
+
 0.000056  2016-08-09 14:09:17-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Make sure Test2::Compare::convert loads deps
