--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix setting hub when getting context
+
 1.302050  2016-08-10 22:12:19-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add contact info to main doc and readme
