--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
     - Document Test::Builder::Tester plan limitations
     - Document limitations in is_deeply (#595)
     - Better documentation of done_testing purpose (#151)
+    - Make ctx->send_event detect termination events (#707)
 
 1.302052  2016-08-13 14:34:07-07:00 America/Los_Angeles
 
