--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Fix special case of ok line ending in \
+    - Improve a test that captures STDERR/STDOUT (Thanks HAARG)
+
 1.302054  2016-08-20 16:21:44-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Allow '#' and '\n' in ok names
