--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Minor typo fix
+    - No logic chnges since last trial
+
 1.302055  2016-08-30 12:13:32-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix special case of ok line ending in \
