Mask warning when comparing uninitialized $@
This chek is just to give people extra info in some consitions. We
really only care that $@ has no changed, and for our purpose undef,
uninit, and empty string are all equivilent.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Mask warning when comparing $@ in Test2::API::Context
+
 1.302057  2016-09-18 12:12:18-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Doc fixes
